# discordkit

./: .commitlintrc.js  .eslintrc.js  .fiddly.config.json  .gitignore  .prettierrc.js  .release-it.js  .yarnrc.yml  CHANGELOG.md  LICENSE  LICENSE.md  README.md  eslint.config.mjs  jest.config.js  jest.config.ts  jest.setup.ts  knip.json  package.json  tsconfig.eslint.json  tsconfig.json  tsup.config.ts  turbo.json  vite.config.ts  vitest.config.ts
.bumpy/: README.md  _config.json  add-electron-adapter.md  add-native-activity-invites.md  add-native-lobbies.md  add-native-messaging.md  add-native-relationships.md  add-native-session-lifecycle.md  add-native-social-sdk.md  add-native-users.md  add-native-voice.md  add-oauth-package.md  add-tauri-adapter.md  adopt-saeris-configs.md  drop-type-fest.md  electron-full-domain-bridge.md  electron-signals-and-refinements.md  fix-native-disposablestack-node22.md  fix-native-unregistered-ffi-types.md  native-branded-snowflake-ids.md  native-koffi-free-subscription.md  native-snapshot-tojson.md  refactor-native-audit-pass.md  sdk-1-9-17379-and-deps.md  v4-capability-aware-fetchers.md  v4-discord-docs-alignment.md  v4-drop-convenience-exports.md  v4-multipart-uploads.md  v4-new-endpoints.md  v4-pattern-b-schema-helpers.md  v4-test-perf.md  v4-toolchain-and-tree-shaking.md  zany-mild-reef.md
examples/with-tauri/src-tauri/: Cargo.toml  tauri.conf.json
examples/with-tauri/src-tauri/binaries/koffi/win32_x64/: koffi.node
examples/with-tauri/src-tauri/capabilities/: default.json
examples/with-tauri/src-tauri/src/: lib.rs
(+848 files in other folders)
